kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bidforge-service
  namespace: bidforge
spec:
  selector:
    app: bidforge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31362
  type: NodePort
