kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rms-ingress
  namespace: rent-management-system

spec:
  ingressClassName: nginx

  rules:
    - host: bytechus.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rms-service
                port:
                  number: 80

    - host: www.bytechus.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rms-service
                port:
                  number: 80
